--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "navigation": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-multi-carousel": "^2.8.5",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
